--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,9 +3,9 @@ compatibility_date = "2024-10-01"
 pages_build_output_dir = "./dist"
 compatibility_flags = [ "nodejs_compat" ]
 
-# [vars]
+[vars]
 # MY_VAR = "my-variable"
-
+MY_NAME = "Hono Todo App"
 # [[kv_namespaces]]
 # binding = "MY_KV_NAMESPACE"
 # id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
